# spel

./: .gitignore  .hgignore  .travis.yml  README.md  appveyor.yml  linux_install_dependencies.sh  project.xsd  windows_build.bat
src/: CMakeLists.txt  install.nsi  install_x64.nsi
src/cmake/: FindEigen3.cmake  FindLibCWD.cmake  FindOpenGM.cmake  modules.cmake
src/libpose/: CMakeLists.txt  bodyJoint.cpp  bodyJoint.hpp  bodyPart.cpp  bodyPart.hpp  colorHistDetector.cpp  colorHistDetector.hpp  detector.cpp  detector.hpp  frame.cpp  frame.hpp  hogDetector.cpp  hogDetector.hpp  imagesimilaritymatrix.cpp  imagesimilaritymatrix.hpp  interpolation.cpp  interpolation.hpp  keyframe.cpp  keyframe.hpp  limbLabel.cpp  limbLabel.hpp  limblabel.h  lockframe.cpp  lockframe.hpp  minspanningtree.cpp  minspanningtree.hpp  nskpsolver.cpp  nskpsolver.hpp  poseHelper.cpp  poseHelper.hpp  score.cpp  score.h  score.hpp  sequence.cpp  sequence.hpp  skeleton.cpp  skeleton.hpp  solution.cpp  solution.hpp  solver.cpp  (+7 more)
src/libposegui/: CMakeLists.txt  bodyjointitem.cpp  bodyjointitem.h  bodypartitem.cpp  bodypartitem.h  exceptions.h  flowlayout.h  frameattrstorage.h  frameboxwidget.cpp  frameboxwidget.h  frametablewidget.cpp  frametablewidget.h  frameview2d.cpp  frameview2d.h  frameview3d.cpp  frameview3d.h  limblabelitem.cpp  limblabelitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  projectattr.cpp  projectattr.h  projectdocument.cpp  projectdocument.h  resources.qrc  solveboxwidget.cpp  solveboxwidget.h  solverparametersdialog.cpp  solverparametersdialog.h  solverparametersdialog.ui  toolboxwidget.cpp  toolboxwidget.h  utility.cpp  utility.h  xmlmessagehandler.cpp  xmlmessagehandler.h
src/libposegui/model_handlers/: bodyjointhandler.cpp  bodyjointhandler.h  bodyjointheaderhandler.cpp  bodyjointheaderhandler.h  bodyjointshandler.cpp  bodyjointshandler.h  bodyjointsheaderhandler.cpp  bodyjointsheaderhandler.h  bodyparthandler.cpp  bodyparthandler.h  bodypartheaderhandler.cpp  bodypartheaderhandler.h  bodypartshandler.cpp  bodypartshandler.h  bodypartsheaderhandler.cpp  bodypartsheaderhandler.h  framehandler.cpp  framehandler.h  frameshandler.cpp  frameshandler.h  projecthandler.cpp  projecthandler.h
src/python/: drawSolverLabels.py  drawTopLabels.py  h36m.py  plotDetFrameErrors.py  plotDetSeqErrors.py  plotErrors.py  plotFrameErrors.py  plotLabelErrors.py  plotLabelErrors_global.py  plotSeqErrors.py  plotSimiliarityMatrix.py  plotSolverTuneErrors.py  plotSolverTuneErrors_frames.py  plotSolverTuneErrors_parts.py  plotSolverTuneErrors_polygons.py  plotSolverTuneErrors_solved.py
src/spel/: CMakeLists.txt  PHPoint.hpp  POSERECT.hpp  SURFDetector2.cpp  SURFDetector2.hpp  SURFDetector2_.hpp  _Solver.cpp  _Solver.hpp  bodyJoint.cpp  bodyJoint.hpp  bodyPart.cpp  bodyPart.hpp  colorHistDetector.cpp  colorHistDetector.hpp  detector.cpp  detector.hpp  frame.cpp  frame.hpp  hogDetector.cpp  hogDetector.hpp  imagehogsimilaritymatrix.cpp  imagehogsimilaritymatrix.hpp  imagemasksimilaritymatrix.cpp  imagemasksimilaritymatrix.hpp  imagepixelsimilaritymatrix.cpp  imagepixelsimilaritymatrix.hpp  imagesimilaritymatrix.cpp  imagesimilaritymatrix.hpp  interpolation.cpp  interpolation.hpp  keyframe.cpp  keyframe.hpp  limbLabel.cpp  limbLabel.hpp  lockframe.cpp  lockframe.hpp  memoryDebug.cpp  memoryDebug.hpp  minspanningtree.cpp  minspanningtree.hpp  (+30 more)
src/spelgui/: CMakeLists.txt  GUISolveParameters.cpp  GUISolveParameters.h  bodyjointitem.cpp  bodypartitem.cpp  bodypartitem.h  exceptions.h  filepathstorage.h  flowlayout.cpp  frameboxwidget.cpp  frameboxwidget.h  frametablewidget.cpp  frametablewidget.h  frameview2d.cpp  frameview2d.h  frameview3d.cpp  frameview3d.h  limblabelitem.cpp  limblabelitem.h  main.cpp  mainwindow.cpp  mainwindow.h  poseguidocument.h  project.cpp  project.h  projectattr.cpp  projectattr.h  projectattrstorage.h  projectdocument.cpp  solveboxwidget.cpp  solveboxwidget.h  solverparametersdialog.cpp  solverparametersdialog.h  solverparametersdialog.ui  speldocument.h  toolboxwidget.cpp  toolboxwidget.h  utility.cpp  utility.h  xmlmessagehandler.cpp  (+1 more)
src/spelgui/model_handlers/: bodyjointhandler.cpp  bodyjointhandler.h  bodyjointheaderhandler.cpp  bodyjointheaderhandler.h  bodyjointshandler.cpp  bodyjointshandler.h  bodyjointsheaderhandler.cpp  bodyjointsheaderhandler.h  bodyparthandler.cpp  bodyparthandler.h  bodypartheaderhandler.cpp  bodypartshandler.cpp  bodypartsheaderhandler.cpp  framehandler.cpp  framehandler.h  frameshandler.cpp  frameshandler.h  modelhandler.h  projecthandler.cpp  projecthandler.h
src/tests/: CMakeLists.txt  test_exec.cpp
src/tests/CHDTrainTestData/: trijumpSD_50x41.xml
src/tests/SimilarityMatrixTestsData/: Abstraction.xml  ISM.txt  ISM1.txt  In_Matrix.txt  In_Matrix2.txt  trijumpSD_100x82.ism  trijumpSD_100x82.xml
src/tests/SurfDetectorTestsData/: trijumpSD_shortcut.xml
src/tests/libpose/: TestsFunctions.cpp  TestsFunctions.hpp  bodyJoint_constructor_tests.cpp  bodyJoint_get_and_set_tests.cpp  bodyJoint_operators_tests.cpp  bodyPart_constructor_tests.cpp  bodyPart_get_and_set_tests.cpp  bodyPart_operators_tests.cpp  colorHistDetector_get_and_set_tests.cpp  colorHistDetector_operators_tests.cpp  colorHistDetector_private_tests.cpp  colorHistDetector_train_tests.cpp  detector_tests.cpp  frame_general_tests.cpp  frame_get_and_set_tests.cpp  frames_tests.cpp  hogDetector_get_and_set_tests.cpp  hogdetector_tests.cpp  interpolation_get_and_set_tests.cpp  keyframe_get_and_set_tests.cpp  limbLabel_tests.cpp  lockframe_get_and_set_tests.cpp  nskpsolver_tests.cpp  poseHelper_angle_dist_tests.cpp  poseHelper_distsquared_tests.cpp  poseHelper_poserect_tests.cpp  poseHelper_rotatepoint_tests.cpp  score_constructor_tests.cpp  score_get_and_set_tests.cpp  score_operators_tests.cpp  skeleton_get_and_set_tests.cpp  skeleton_infer_tests.cpp  skeleton_operators_tests.cpp  surfDetector_get_and_set_tests.cpp  surfdetector_tests.cpp
src/tests/nskpsolverTestData/: trijumpSD_13-22.xml
src/tests/spel/: ImageRotationTests.cpp  (+50 more)
src/utils/: CMakeLists.txt
(+747 files in other folders)
